# ChangeLog for media-gfx/openexr_viewers
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/openexr_viewers/ChangeLog,v 1.30 2013/07/23 09:42:55 ssuominen Exp $

*openexr_viewers-2.0.1 (23 Jul 2013)

  23 Jul 2013; Samuli Suominen <ssuominen@gentoo.org>
  +openexr_viewers-2.0.1.ebuild:
  Version bump.

*openexr_viewers-2.0.0 (12 Mar 2013)

  12 Mar 2013; Samuli Suominen <ssuominen@gentoo.org>
  +openexr_viewers-2.0.0.ebuild,
  +files/openexr_viewers-2.0.0-nvidia-automagic.patch:
  Version bump.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> openexr_viewers-1.0.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  20 Mar 2011; Justin Lecher <jlec@gentoo.org> openexr_viewers-1.0.2.ebuild:
  x11-libs/fltk SLOTMOVE 1.1 -> 1, corrected ebuild accordingly

  06 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  openexr_viewers-1.0.2.ebuild:
  Stable for ppc64 wrt bug 277202

  08 Dec 2010; Jeroen Roovers <jer@gentoo.org> openexr_viewers-1.0.2.ebuild:
  Stable for PPC (bug #277202).

  04 Dec 2010; Raúl Porcel <armin76@gentoo.org> openexr_viewers-1.0.2.ebuild:
  alpha/ia64/sparc stable wrt #277202

  26 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  openexr_viewers-1.0.2.ebuild:
  stable x86, security bug 277202

  26 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  openexr_viewers-1.0.2.ebuild:
  Stable on amd64 wrt bug #277202

  25 Nov 2010; Jeroen Roovers <jer@gentoo.org> openexr_viewers-1.0.2.ebuild:
  Stable for HPPA (bug #277202).

*openexr_viewers-1.0.2 (24 Jul 2010)

  24 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  +openexr_viewers-1.0.2.ebuild,
  +files/openexr_viewers-1.0.2-nvidia-automagic.patch:
  Version bump wrt #329713 by Arfrever Frehtes Taifersar Arahesis.

  10 Mar 2010; Sebastian Pipping <sping@gentoo.org>
  openexr_viewers-1.0.1.ebuild:
  Fix SRC_URI (bug #262655)

  15 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  files/openexr_viewers-1.0.1-gcc44.patch: