@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/openexr_viewers
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/openexr_viewers/ChangeLog,v 1.30 2013/07/23 09:42:55 ssuominen Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/openexr_viewers/ChangeLog,v 1.31 2014/01/22 18:30:48 ssuominen Exp $
+
+  22 Jan 2014; Samuli Suominen <ssuominen@gentoo.org>
+  -openexr_viewers-2.0.0.ebuild:
+  old
 
 *openexr_viewers-2.0.1 (23 Jul 2013)
 
